<!--
  ~ /*
  ~  * Copyright (C) 2018 by onlymash <im@fiepi.me>, All rights reserved
  ~  *
  ~  * This program is free software: you can redistribute it and/or modify it
  ~  * under the terms of the GNU General Public License as published by
  ~  * the Free Software Foundation, either version 3 of the License,
  ~  * or (at your option) any later version.
  ~  *
  ~  * This program is distributed in the hope that it will be useful, but WITHOUT ANY
  ~  * WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS
  ~  * FOR A PARTICULAR PURPOSE.  See the GNU General Public License for more details.
  ~  *
  ~  * You should have received a copy of the GNU General Public License along with
  ~  * this program. If not, see <http://www.gnu.org/licenses/>.
  ~  *
  ~  */
  -->

<resources>
    <string name="app_name" translatable="false">Moebooru</string>

    <string name="post">Post</string>
    <string name="post_limit">Post limit</string>
    <string name="posts">Posts</string>
    <string name="settings">Settings</string>
    <string name="search">Search</string>
    <string name="add">Add</string>
    <string name="add_a_tag">Add a tag</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="tag_can_not_be_empty">Tag can not be empty</string>

    <string name="staggered_grid">Staggered grid</string>

    <string name="advanced_options">Advanced options</string>
    <string name="image_loader">Image loader</string>
    <string name="image_loader_glide">Glide</string>
    <string name="image_loader_sketch">Sketch</string>

    <string name="cache">Cache</string>
    <string name="cache_memory">Memory cache</string>
    <string name="cache_disk">Disk cache</string>

    <string name="about">About</string>
    <string name="about_title">Moebooru</string>
    <string name="send_email">Send email</string>

    <string name="drawer_header_desc">Drawer header</string>
    <string name="drawer_open">Open drawer</string>
    <string name="drawer_close">Close drawer</string>
    <string name="edit">Edit</string>

    <string name="downloads">Downloads</string>

    <string name="appearance">Appearance</string>

    <string name="night_mode">Night mode</string>
    <string name="night_mode_system">Follow system</string>
    <string name="night_mode_auto">Auto</string>
    <string name="night_mode_on">On</string>
    <string name="night_mode_off">Off</string>

    <string name="more_options">More options</string>

    <string name="post_limit_default">50 (Default)</string>
    <string name="cache_memory_default">128 MiB (Default)</string>
    <string name="disk_memory_default">256 MiB (Default)</string>

    <string name="crash_report">Crash Report</string>
    <string name="enable_crash_report">Enable crash report</string>
    <string name="on">On</string>
    <string name="off">Off</string>

    <string name="remove">Remove</string>
    <string name="copy">Copy</string>

    <string name="post_size_download">Download size</string>
    <string name="post_size_browse">Browse size</string>

    <string name="post_size_sample">Sample</string>
    <string name="post_size_larger">Larger</string>
    <string name="post_size_origin">Origin</string>

    <string name="post_stats_author">Author</string>
    <string name="post_stats_children">Children</string>
    <string name="post_stats_created_at">Created at</string>
    <string name="post_stats_creator">Creator</string>
    <string name="post_stats_id">Id</string>
    <string name="post_stats_larger_size">Larger size</string>
    <string name="post_stats_larger_url">Larger url</string>
    <string name="post_stats_origin_size">Origin size</string>
    <string name="post_stats_origin_url">Origin url</string>
    <string name="post_stats_parent_id">Parent id</string>
    <string name="post_stats_rating">Rating</string>
    <string name="post_stats_sample_size">Sample size</string>
    <string name="post_stats_sample_url">Sample url</string>
    <string name="post_stats_score">Score</string>
    <string name="post_stats_size">Size</string>
    <string name="post_stats_source">Source</string>

    <string name="downloads_stop">Stop</string>
    <string name="downloads_start">Start</string>
    <string name="downloads_stop_all">Stop all</string>
    <string name="downloads_start_all">Start all</string>
    <string name="title_activity_login">Sign in</string>

    <string name="title_account">Account</string>
    <string name="title_login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="password_hash_salt">Password hash salt</string>
    <string name="set_account">Set account</string>
    <string name="error_invalid_username">This username is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>


    <string name="share">Share</string>
    <string name="download">Download</string>
    <string name="via">Via</string>

    <string name="state_idle">IDLE</string>
    <string name="state_pending">PENDING</string>
    <string name="state_unknown">UNKNOWN</string>
    <string name="state_running">RUNNING</string>

    <string name="downloads_notification">Downloads notification</string>

    <string name="clear_completed">Clear completed</string>
    <string name="clear_all">Clear all</string>

    <string name="local_gallery">Local gallery</string>
    <string name="delete">Delete</string>
    <string name="set_as">Set as</string>
    <string name="edit_img">Edit</string>
    <string name="img_info">Image info</string>

    <string name="properties">Properties</string>
    <string name="path">Path</string>
    <string name="size">Size</string>
    <string name="name">Name</string>
    <string name="filename">Filename</string>
    <string name="open_on_website">Open on website</string>

    <string name="stat_downloading_title">Downloading</string>
    <string name="stat_download_done_title">Download finished</string>

    <string name="sample_url_has_been_copied">Sample url has been copied</string>
    <string name="larger_url_has_been_copied">Larger url has been copied</string>
    <string name="origin_url_has_been_copied">Origin url has been copied</string>

    <string name="all_website">All website</string>

    <string name="feedback">Feedback</string>
    <string name="telegram">Telegram</string>
    <string name="email">Email</string>
    <string name="github">Github</string>
    <string name="author">Author</string>

    <string name="send_crash_log">Send crash log</string>
    <string name="select_crash_log_file">Select crash log file and send to developer</string>

    <string name="safe_mode">Safe mode</string>
    <string name="show_info_bar">Show info bar</string>

    <string name="account_id">Id</string>
    <string name="account_name">Name</string>

    <string name="my_favorites">My favorites</string>
    <string name="remove_account">Remove account</string>

    <string name="boorus">Boorus</string>
    <string name="schema">Schema</string>
    <string name="domain">Domain</string>

    <string name="add_booru">Add booru</string>
    <string name="booru_name">Booru name</string>
    <string name="save">Save</string>
    <string name="edit_booru">Edit booru</string>
    <string name="delete_booru">Delete booru</string>

    <string name="filter">Filter</string>
    <string name="filter_order">order: </string>
    <string name="filter_rating">rating: </string>
    <string name="tag_filter">Tag filter</string>

    <string name="transition_name_post" translatable="false">transition_name_post</string>
    <string name="vote">Vote</string>
    <string name="pools">Pools</string>
    <string name="comment">Comment</string>
    <string name="comments">Comments</string>
</resources>
