<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2018 by onlymash <im@mash.im>, All rights reserved
  ~
  ~ This program is free software: you can redistribute it and/or modify it under the terms of the GNU General Public License as published by the Free Software Foundation, either version 3 of the License, or (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License along with this program. If not, see <http://www.gnu.org/licenses/>.
  ~
  -->

<!--suppress AndroidElementNotAllowed -->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory
        android:title="@string/appearance">

        <SimpleMenuPreference
            android:key="night_mode"
            android:entries="@array/night_modes"
            android:entryValues="@array/night_mode_values"
            android:defaultValue="system"
            android:summary="%s"
            android:title="@string/night_mode"
            android:icon="@drawable/ic_settings_time_24dp"
            app:iconSpaceReserved="true"/>

        <SimpleMenuPreference
            android:key="grid_mode"
            android:entries="@array/grid_modes"
            android:entryValues="@array/grid_mode_values"
            android:defaultValue="staggered_grid"
            android:summary="%s"
            android:title="@string/grid_mode"
            android:icon="@drawable/ic_settings_grid_24dp"
            app:iconSpaceReserved="true"/>

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/post">

        <SimpleMenuPreference
            android:key="post_limit"
            android:entries="@array/post_limit"
            android:entryValues="@array/post_limit_values"
            android:defaultValue="40"
            android:summary="%s"
            android:title="@string/post_limit"
            android:icon="@drawable/ic_settings_item_numbered_24dp"
            app:iconSpaceReserved="true" />

        <SimpleMenuPreference
            android:key="post_size_browse"
            android:entries="@array/post_size"
            android:entryValues="@array/post_size_values"
            android:defaultValue="sample"
            android:summary="%s"
            android:title="@string/post_size_browse"
            android:icon="@drawable/ic_settings_eye_24dp"
            app:iconSpaceReserved="true" />

        <SimpleMenuPreference
            android:key="post_size_download"
            android:entries="@array/post_size"
            android:entryValues="@array/post_size_values"
            android:defaultValue="larger"
            android:summary="%s"
            android:title="@string/post_size_download"
            android:icon="@drawable/ic_settings_file_download_24dp"
            app:iconSpaceReserved="true" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/cache">

        <SimpleMenuPreference
            android:key="cache_memory"
            android:entries="@array/cache_memory"
            android:entryValues="@array/cache_memory_values"
            android:defaultValue="256"
            android:summary="%s"
            android:title="@string/cache_memory"
            android:icon="@drawable/ic_settings_storage_24dp"
            app:iconSpaceReserved="true"/>

        <SimpleMenuPreference
            android:key="cache_disk"
            android:entries="@array/cache_disk"
            android:entryValues="@array/cache_disk_values"
            android:defaultValue="256"
            android:summary="%s"
            android:title="@string/cache_disk"
            android:icon="@drawable/ic_settings_sd_storage_24dp"
            app:iconSpaceReserved="true"/>

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/crash_report">

        <SwitchPreference
            android:key="enable_crash_report"
            android:title="@string/enable_crash_report"
            android:defaultValue="true"
            android:summaryOn="@string/on"
            android:summaryOff="@string/off"
            android:icon="@drawable/ic_settings_bug_report_24dp"
            app:iconSpaceReserved="true"/>

    </PreferenceCategory>

</PreferenceScreen>