<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ /*
  ~  * Copyright (C) 2018 by onlymash <im@fiepi.me>, All rights reserved
  ~  *
  ~  * This program is free software: you can redistribute it and/or modify it
  ~  * under the terms of the GNU General Public License as published by
  ~  * the Free Software Foundation, either version 3 of the License,
  ~  * or (at your option) any later version.
  ~  *
  ~  * This program is distributed in the hope that it will be useful, but WITHOUT ANY
  ~  * WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS
  ~  * FOR A PARTICULAR PURPOSE.  See the GNU General Public License for more details.
  ~  *
  ~  * You should have received a copy of the GNU General Public License along with
  ~  * this program. If not, see <http://www.gnu.org/licenses/>.
  ~  *
  ~  */
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_vote"
        android:title="@string/vote"
        android:icon="@drawable/ic_action_star_border_24dp"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_comment"
        android:title="@string/comment"
        android:icon="@drawable/ic_action_comment_white_24dp"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_share_url"
        android:title="@string/share"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_download"
        android:title="@string/download"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_browser"
        android:title="@string/open_on_website"
        app:showAsAction="never"/>

</menu>