<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ /*
  ~  * Copyright (C) 2018 by onlymash <im@fiepi.me>, All rights reserved
  ~  *
  ~  * This program is free software: you can redistribute it and/or modify it
  ~  * under the terms of the GNU General Public License as published by
  ~  * the Free Software Foundation, either version 3 of the License,
  ~  * or (at your option) any later version.
  ~  *
  ~  * This program is distributed in the hope that it will be useful, but WITHOUT ANY
  ~  * WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS
  ~  * FOR A PARTICULAR PURPOSE.  See the GNU General Public License for more details.
  ~  *
  ~  * You should have received a copy of the GNU General Public License along with
  ~  * this program. If not, see <http://www.gnu.org/licenses/>.
  ~  *
  ~  */
  -->

<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <item
        android:id="@+id/action_share"
        android:title="@string/share"
        android:icon="@drawable/ic_action_share_24dp"
        app:showAsAction="always"
        tools:ignore="AlwaysShowAction" />

    <item
        android:id="@+id/action_set_as"
        android:title="@string/set_as"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_edit"
        android:title="@string/edit_img"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_delete"
        android:title="@string/delete"
        android:icon="@drawable/ic_action_delete_24dp"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_info"
        android:title="@string/img_info"
        app:showAsAction="never" />

</menu>