<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ /*
  ~  * Copyright (C) 2018 by onlymash <im@fiepi.me>, All rights reserved
  ~  *
  ~  * This program is free software: you can redistribute it and/or modify it
  ~  * under the terms of the GNU General Public License as published by
  ~  * the Free Software Foundation, either version 3 of the License,
  ~  * or (at your option) any later version.
  ~  *
  ~  * This program is distributed in the hope that it will be useful, but WITHOUT ANY
  ~  * WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS
  ~  * FOR A PARTICULAR PURPOSE.  See the GNU General Public License for more details.
  ~  *
  ~  * You should have received a copy of the GNU General Public License along with
  ~  * this program. If not, see <http://www.gnu.org/licenses/>.
  ~  *
  ~  */
  -->

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_margin="5dp"
    tools:ignore="RtlHardcoded">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/schema"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAllCaps="true"
            style="?android:listSeparatorTextViewStyle"/>

        <TextView
            android:text="@string/domain"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAllCaps="true"
            style="?android:listSeparatorTextViewStyle"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="40dp">
        <TextView
            android:id="@+id/schema"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:textColor="?android:attr/textColorSecondary"
            android:textAppearance="?android:textAppearanceMedium" />

        <TextView
            android:id="@+id/domain"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:textColor="?android:attr/textColorSecondary"
            android:textAppearance="?android:textAppearanceMedium"/>
    </LinearLayout>

    <TextView
        android:text="@string/password_hash_salt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAllCaps="true"
        style="?android:listSeparatorTextViewStyle"/>

    <TextView
        android:id="@+id/hash_salt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="40dp"
        android:gravity="center_horizontal"
        android:textColor="?android:attr/textColorSecondary"
        android:textAppearance="?android:textAppearanceMedium"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?android:dividerHorizontal"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/btn_edit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/edit"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"/>
        <Button
            android:id="@+id/btn_delete"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/delete"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"/>
    </LinearLayout>

</LinearLayout>