<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_margin="18dp"
    android:padding="12dp"
    tools:ignore="RtlHardcoded">

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/booru_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/booru_name"
            android:maxLines="1"
            android:singleLine="true"
            android:inputType="text|textAutoComplete"/>

    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Spinner
            android:entries="@array/schema"
            android:id="@+id/schema"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            style="@style/Widget.AppCompat.Spinner.Underlined" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/domain"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/domain"
                android:maxLines="1"
                android:singleLine="true"
                android:inputType="text|textUri"/>

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/hash_salt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password_hash_salt"
            android:inputType="textMultiLine|textAutoComplete"
            android:scrollbars="vertical"
            android:singleLine="false"
            android:gravity="left|top"
            android:maxLines="3" />
    </com.google.android.material.textfield.TextInputLayout>

</LinearLayout>